[gd_scene load_steps=14 format=2]

[ext_resource path="res://game/Game.gd" type="Script" id=1]
[ext_resource path="res://jsl-ancient/JANCIENT.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://players/Heres/HeresUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://players/Yetzira/YetziraUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://players/Yetzira/Yetzira_won_stg.gd" type="Script" id=5]
[ext_resource path="res://players/Heres/Heres_won_stg.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=7]

size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Role_display" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 379.0
margin_top = 22.0
margin_right = 511.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Turn" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 391.0
margin_top = 60.0
margin_right = 527.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="End_Turn" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 874.0
margin_top = 544.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "End Turn"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="HeresUI" parent="." index="3" instance=ExtResource( 3 )]

[node name="YetziraUI" parent="." index="4" instance=ExtResource( 4 )]

[node name="Yetzira_Won" type="Label" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 386.0
margin_top = 244.0
margin_right = 638.0
margin_bottom = 285.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Yetzira Won"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Heres_Won" type="Label" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 386.0
margin_top = 244.0
margin_right = 549.0
margin_bottom = 285.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Heres Won"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Yetzira_won_stg" type="Label" parent="." index="7"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 346.0
margin_top = 280.0
margin_right = 679.0
margin_bottom = 321.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Yetzira Won The Stage"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 5 )
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Y_won_timer" type="Timer" parent="Yetzira_won_stg" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Heres_won_stg" type="Label" parent="." index="8"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 359.0
margin_top = 280.0
margin_right = 665.0
margin_bottom = 321.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
text = "Heres Won The Stage"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 6 )
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="H_won_timer" type="Timer" parent="Heres_won_stg" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="send_current_and_last_stage" from="." to="YetziraUI" method="_on_Game_send_current_and_last_stage"]

[connection signal="send_current_and_last_stage" from="." to="HeresUI" method="_on_Game_send_current_and_last_stage"]

[connection signal="start_H_timer" from="." to="Heres_won_stg" method="start_timer"]

[connection signal="start_Y_timer" from="." to="Yetzira_won_stg" method="start_timer"]

[connection signal="pressed" from="End_Turn" to="." method="_on_End_Turn_pressed"]

[connection signal="timeout" from="Yetzira_won_stg/Y_won_timer" to="Yetzira_won_stg" method="_on_Y_won_timer_timeout"]

[connection signal="timeout" from="Heres_won_stg/H_won_timer" to="Heres_won_stg" method="_on_H_won_timer_timeout"]


